fix back button overlap

--- a/src/jsMain/resources/css/mobile.css
+++ b/src/jsMain/resources/css/mobile.css
@@ -29,4 +29,8 @@
     #planet-list{
         max-height: 500px;
     }
+
+    .accent-line {
+        font-size: smaller;
+    }
 }
