--- a/src/jsMain/resources/css/styles.css
+++ b/src/jsMain/resources/css/styles.css
@@ -19,7 +19,8 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
+  height: 5px;
 }
 
 ::-webkit-scrollbar-corner {
